2003-04-30  David Hyatt  <hyatt@apple.com>

	Fixes for 3227983 and 3224521, both bugs involving bad letter-spacing
	property values.  This fixes all Movable Type blogs that had this
	error in their stylesheets.
	
        Reviewed by gramps

        * khtml/css/parser.cpp:
        * khtml/css/parser.y:

2003-04-30  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

	- fixed 3233819 -- MALLORY: onChange handler being called on SELECT even if selected item does not change

        * kwq/KWQComboBox.h: Added _currentItem variable, updateCurrentItem function, and replaced
        activated function with itemSelected function.
        
        * kwq/KWQComboBox.mm:
        (QComboBox::QComboBox): Call updateCurrentItem so _currentItem is up to date.
        (QComboBox::insertItem): Ditto.
        (QComboBox::clear): Ditto.
        (QComboBox::setCurrentItem): Ditto.
        (QComboBox::updateCurrentItem): Added. Returns true if current item has changed since the last time
        the function was called.
        (QComboBox::itemSelected): Only send the activate method if updateCurrentItem returns true.
        (-[KWQComboBoxAdapter action:]): Call itemSelected instead of calling activated directly.

2003-04-29  David Hyatt  <hyatt@apple.com>

	Fix for the Adam Rice float/padding test on diveintomark's list
	of bugs.  We weren't adding in the parent's border/padding in
	one case in the clearFloats function, which resulted in the
	float being incorrectly positioned.
	
        Reviewed by darin

        * khtml/rendering/render_block.cpp:

2003-04-29  David Hyatt  <hyatt@apple.com>

	This patch fixes the following bugs:

	(1) 3186174 - padding-left improperly applied to list items.
	The fix is in render_list.cpp and involves adding in the
	list item's border and padding so that outside markers end up
	outside the border box instead of just inside the padding box.

	(2) 3239571 - a stray !important after a ; causes the CSS parser